--- a/css/main.css
+++ b/css/main.css
@@ -12,3 +12,49 @@ html {
 body {
   margin: 0;
 }
+
+section {
+  background-color: #ccc;
+  padding: 2em;
+}
+
+h2 {
+  margin: 0 0 1.5rem;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+img {
+  width: 5em;
+  margin-right: 1.5em;
+}
+
+hgroup {
+  width: 16em;
+}
+
+h3, h4 {
+  margin: 0;
+}
+
+p {
+  width: 24rem;
+  margin: 0 auto 0 0;
+}
+
+a {
+  background-color: #444;
+  color: white;
+  text-decoration: none;
+  padding: .5rem 1rem .6rem;
+}
